--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -6,6 +6,7 @@ on:
 jobs:
     job1:
         name: job1
+        runs-on: ubuntu-latest
         steps:
         - name: step1
           run: echo "step1"
