nuevas lineas devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,12 @@
   },
   "extensions":[
 	"Github.copilot"
-  ]
+  ],
+  "customizations": {
+        "vscode": {
+            "extensions": [
+                "streetsidesoftware.code-spell-checker"
+            ]
+        }
+    }
 }
