jobs en secuencia

--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -13,6 +13,7 @@ jobs:
         - name: step2
           run: echo "step2"
     job2:
+        needs: job1
         name: job2
         runs-on: ubuntu-latest
         steps:
