--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -12,7 +12,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: step1
-          run: echo ${{nombre}}
+          run: echo "${{nombre}}"
         - name: step2
           run: echo "step2"
     job2:
