--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -5,14 +5,14 @@ on:
         types: [opened]
     workflow_dispatch:
 env:
-  nombre: 'Lander A.'
+  nombre: Lander
 jobs:
     job1:
         name: job1
         runs-on: ubuntu-latest
         steps:
         - name: step1
-          run: echo "${{nombre}}"
+          run: echo "nombre:$nombre"
         - name: step2
           run: echo "step2"
     job2:
