--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -5,14 +5,14 @@ on:
         types: [opened]
     workflow_dispatch:
 env:
-  nombre: Lander
+  NOMBRE: "Lander Arturo Rubio"
 jobs:
     job1:
         name: job1
         runs-on: ubuntu-latest
         steps:
         - name: step1
-          run: echo "nombre:$nombre"
+          run: echo ${{env.NOMBRE}}
         - name: step2
           run: echo "step2"
     job2:
